assets/css/index.css
/* ... */
/* Adjustments for mobile screens */
@media (max-width: 600px) {
  .yt_video {
      max-width: 420px;
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
    .custom-video {
      width: 100%; /* Full width within the container */
      max-width: 420px; /* Maximum width of the video */
      height: auto; /* Maintain aspect ratio */
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
  .skills-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
    gap: 20px; /* Add some spacing between columns */
    list-style-type: none;
    padding: 15px;
    margin-bottom: 30px;
  }
  /**
     * #SIDEBAR
     */
  .sidebar {
    max-height: 180px;
    margin-bottom: 30px;
  }
  .sidebar.active {
    max-height: 584px;
  }
  .sidebar-info {
    gap: 25px;
  }
  .avatar-box {
    border-radius: 65px;
  }
  .avatar-box img {
    width: 130px;
  }
  .info-content .name {
    margin-bottom: 0px;
  }
  .info-content .title {
    padding: 5px 18px;
  }
  .info_more-btn {
    top: -15px;
    right: -15px;
    padding: 10px 15px;
  }
  .info_more-btn span {
    display: block;
    font-size: var(--fs-8);
  }
  .info_more-btn ion-icon {
    display: none;
  }
  .separator {
    margin: 32px 0;
  }
  .contacts-list {
    gap: 20px;
  }
  .contact-info {
    max-width: calc(100% - 64px);
    width: calc(100% - 50px);
  }
}
/* Adjustments for mobile screens */
@media (max-width: 450px) {
  .yt_video {
      max-width: 350px;
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
    .custom-video {
      width: 100%; /* Full width within the container */
      max-width: 350px; /* Maximum width of the video */
      height: auto; /* Maintain aspect ratio */
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
  }
}

